Alteração nos retornos de erro.